# wahwee-control

./: CMakeLists.txt  default.nix
.github/workflows/: cmake.yml
src/: joystick.cpp
